--- a/style.css
+++ b/style.css
@@ -1,53 +1,118 @@
 
-body {
-	background-color: white;
-	color: black;
+
+
+
+#background-video {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: -1;
 }
 
-h1 ,h2{
-	font-family: "Comic Sans MS";
-  color: black;
-  background-color: white;
+.bg-image{
+  position: relative;
+  background-image: url("weather.jpeg");
+  padding: 27.5%;
+  background-size: 100%;
+
+  -webkit-filter: blur(8px);
+
+
+  height: 100%;
+
+
+
+  background-repeat: no-repeat;
+
+  background-size: cover;
+  margin:-5px;
+}
+
+#sunup{
+  width: 50px;
+  height: 50px;
+}
+
+#sundown{
+  width: 50px;
+  height: 50px;
+}
+
+p:hover{
+  background-color: rgba(200,200,200,0.2);
+  transition-duration: 0.5s;
+}
+#city {
+    border-radius: 18px;
+    padding: 10px;
+    width: 150px;
+    height: 15px;
+    /* display: inline-block;
+    margin-left: 50px; */
+
+
+}
+#button{
+  border-radius: 18px;
+
+}
+#country{
+  border-radius: 18px;
+  padding: 10px;
+  width: 150px;
+  height: 15px;
+  /* display: inline-flex;
+  flex-direction: row;
+  flex-wrap: wrap; */
+}
+
+.dropdown{
+   background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0, 0.4);
+   color: white;
+
+  /* background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite; */
+
+  border-radius: 5px;
+
+  background-position: center;
+  font-weight: bold;
+  border: 5px solid #f1f1f1;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -10%);
+
+  width: 30%;
+  padding-top: 100px;
+  padding: 20px;
   text-align: center;
 
 }
 
-h2 {
-	font-family: "Courier New";\
-  color: black;
-  background-color: white;
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
-#first{
-  visibility: hidden;
-}
-tr{
-  background-color: white;
-  color: black;
-  text-align: center;
-}
-ul{
-  background-color: white;
-  color: black;
-  text-align: center;
-  font-style: italic;
-  border-bottom: 10px solid;
-  border-color: red;
-}
-.content {
-	background-color: RGBA(33,66,99, 1);
-	margin: 2%;
-	padding: 2%;
-	border: 20px solid yellow;
-}
-p{
-  color: black;
-  background-color: white;
-  margin: 1%;
-}
-.JawTitan{
-	background-color: RGBA(33,66,99, 1);
-	color: black;
-	margin: 2%;
-	padding: 2%;
 
+.custom-select{
+  /* display: inline-block; */
+  display: inline-flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
 }
