--- a/style.css
+++ b/style.css
@@ -120,8 +120,8 @@ p:hover{
 @media (orientation: portrait ) {
 
   #background-video {
-    height: 100%;
-    width: 100%;
+    height: 0%;
+    width: 0%;
     object-fit: cover;
     position: fixed;
     left: 0;
@@ -132,21 +132,12 @@ p:hover{
   }
 
   .bg-image{
-    position: relative;
+    position: absolute;
     background-image: url("weather.jpeg");
-    padding: 27.5%;
-    background-size: 10%;
-
     -webkit-filter: blur(8px);
-
-
-    height: 70%;
-
-
-
     background-repeat: no-repeat;
-
     background-size: cover;
+    width: 50%;
     margin:-5px;
   }
 
