--- a/AOTstyle.css
+++ b/AOTstyle.css
@@ -1,4 +1,4 @@
- @media screen and (max-width: 400px){
+ /* @media screen and (max-width: 400px){
    .bg-text{
      color: blue;
    }
@@ -16,7 +16,7 @@ body, html {
   background-image: url("warhammer.jpeg");
 
 
-}
+} */
 
 
 
@@ -488,3 +488,81 @@ border-right: 5px solid gray;
 	display: grid;
   grid-template-columns: 20% 60% 20% ;
   grid-template-rows: 100%;
+}
+
+@media (orientation: portrait ) {
+  .dropdown{
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+    color: white;
+
+    background-image: url("fire.jpeg");
+
+    background-position: center;
+    font-weight: bold;
+    font-size: 30px;
+    border: 3px solid #f1f1f1;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 30%;
+    width: 50%;
+    padding: 20px;
+    text-align: center;
+  }
+
+  #selection{
+    height: 60px;
+    width: 300px;
+    text-align: center;
+    font-size: 40px;
+  }
+
+  .bg-image {
+    /* The image used */
+    position: relative;
+    background-image: url("aot1.jpeg");
+    /* padding: 80% 0%; */
+    background-size: 100%;
+    /* height: 100vh; */
+    /* Add the blur effect */
+    /* filter: blur(8px); */
+    -webkit-filter: blur(8px);
+
+    /* Full height */
+    height: 100%;
+
+    /* Center and scale the image nicely */
+
+    background-repeat: no-repeat;
+
+    background-size: cover;
+    height: 500px;
+    margin:-5px;
+  }
+
+  .bg-text {
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+    color: white;
+    -webkit-text-stroke-width: 1px;
+              -webkit-text-stroke-color: black;
+    background-image: url("fire.jpeg");
+    background-position: center;
+    font-weight: bold;
+    font-size: 30px;
+    border: 3px solid #f1f1f1;
+    position: absolute;
+    top: 12%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    width: 80%;
+    height:20%;
+    padding: 10px;
+
+    text-align: center;
+  }
+
+}
